Programming readme was updated.

--- a/programming/index.html
+++ b/programming/index.html
@@ -16,7 +16,11 @@
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_start_programming">Start Programming</a></li>
-<li><a href="#_types_of_programming_languages">Types of Programming Languages</a></li>
+<li><a href="#_types_of_programming_languages">Types of Programming Languages</a>
+<ul class="sectlevel2">
+<li><a href="#_first_class_citizen">First-class Citizen</a></li>
+</ul>
+</li>
 <li><a href="#_languages_worth_mentioning">Languages Worth Mentioning</a></li>
 </ul>
 </div>
@@ -45,7 +49,7 @@
 <p><a href="https://youtube.com/playlist?list=PLVFrD1dmDdvdv7trr5j9ir7qrFK5K80X0">Seven Languages in Seven Weeks - YouTube playlist by @code_report</a></p>
 </li>
 <li>
-<p>First-class citizen</p>
+<p><a href="https://en.wikipedia.org/wiki/Tacit_programming" class="bare">en.wikipedia.org/wiki/Tacit_programming</a></p>
 </li>
 </ul>
 </div>
@@ -226,6 +230,17 @@ And 6th, 4th in the <a href="https://survey.stackoverflow.co/2022/#most-loved-dr
 </dd>
 </dl>
 </div>
+<div class="sect2">
+<h3 id="_first_class_citizen">First-class Citizen</h3>
+<div class="quoteblock">
+<blockquote>
+In programming language design, a <strong>first-class</strong> citizen (also type, <strong>object</strong>, entity, or <strong>value</strong>) in a given programming language is an entity which supports all the operations generally available to other entities. These operations typically include being <strong>passed as an argument</strong>, <strong>returned from a function</strong>, and <strong>assigned to a variable</strong>.
+</blockquote>
+<div class="attribution">
+&#8212; <a href="https://en.wikipedia.org/wiki/First-class_citizen" class="bare">en.wikipedia.org/wiki/First-class_citizen</a>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -243,6 +258,10 @@ And 6th, 4th in the <a href="https://survey.stackoverflow.co/2022/#most-loved-dr
 I believe, most of the programming languages are written in the C language.
 Its at that time popularity can be grasped from the song <a href="https://youtu.be/1S1fISh-pag">Write in C</a>.</p>
 </dd>
+<dt class="hdlist1"><a href="https://go.dev/">Go</a></dt>
+<dd>
+<p>"Go is a statically typed, compiled high-level programming language designed at Google by Robert Griesemer, Rob Pike, and Ken Thompson."&#8201;&#8212;&#8201;<a href="https://en.wikipedia.org/wiki/Go_(programming_language)" class="bare">en.wikipedia.org/wiki/Go_(programming_language)</a></p>
+</dd>
 <dt class="hdlist1"><a href="https://www.rust-lang.org/">Rust</a></dt>
 <dd>
 <p>The most loved programming language, plus another language that made it to the Linux kernel source code.
@@ -255,6 +274,10 @@ Memory safety done by borrow checker, is the most loved language, made it to the
 <dt class="hdlist1">JavaScript</dt>
 <dd>
 <p>The programming language of the web.</p>
+</dd>
+<dt class="hdlist1"><a href="https://www.typescriptlang.org/">TypeScript</a></dt>
+<dd>
+<p>Typed superset of JavaScript developed by Microsoft.</p>
 </dd>
 <dt class="hdlist1"><a href="https://www.haskell.org/">Haskell</a></dt>
 <dd>
@@ -272,6 +295,11 @@ Memory safety done by borrow checker, is the most loved language, made it to the
 <dd>
 <p>Iversonian language, by Marshall Lochbaum who started in J and implemented a lot of Dyalog APL himself.</p>
 </dd>
+<dt class="hdlist1"><a href="https://www.raku.org/">Raku</a></dt>
+<dd>
+<p>Formerly called Perl 6.
+When regular expressions are not powerful enough, look at <a href="https://docs.raku.org/language/grammar_tutorial.html" class="bare">docs.raku.org/language/grammar_tutorial.html</a>.</p>
+</dd>
 </dl>
 </div>
 </div>
@@ -279,7 +307,7 @@ Memory safety done by borrow checker, is the most loved language, made it to the
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-28 23:55:47 +0200
+Last updated 2023-04-18 14:52:23 +0200
 </div>
 </div>
 </body>
