index.html files were generated using asciidoctor.

--- a/programming/index.html
+++ b/programming/index.html
@@ -267,7 +267,7 @@ Its at that time popularity can be grasped from the song <a href="https://youtu.
 <p>The most loved programming language, plus another language that made it to the Linux kernel source code.
 Memory safety done by borrow checker, is the most loved language, made it to the kernel.</p>
 </dd>
-<dt class="hdlist1">Zsh</dt>
+<dt class="hdlist1"><a href="zsh">Z shell</a></dt>
 <dd>
 <p>Z Shell is a great option for interactive login shell, extends the Bourne Shell.</p>
 </dd>
@@ -279,7 +279,7 @@ Memory safety done by borrow checker, is the most loved language, made it to the
 <dd>
 <p>Typed superset of JavaScript developed by Microsoft.</p>
 </dd>
-<dt class="hdlist1"><a href="https://www.haskell.org/">Haskell</a></dt>
+<dt class="hdlist1"><a href="haskell">Haskell</a></dt>
 <dd>
 <p>Lazily evaluated purely-functional language with type classes.</p>
 </dd>
@@ -307,7 +307,7 @@ When regular expressions are not powerful enough, look at <a href="https://docs.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-18 14:52:23 +0200
+Last updated 2023-04-18 23:50:38 +0200
 </div>
 </div>
 </body>
