tools readme was updated, info about unix directories was moved to unix/readme.

--- a/tools/index.html
+++ b/tools/index.html
@@ -29,6 +29,7 @@
 <li><a href="#_other">Other</a>
 <ul class="sectlevel2">
 <li><a href="#_eye_strain">Eye Strain</a></li>
+<li><a href="#_video_player">Video Player</a></li>
 </ul>
 </li>
 <li><a href="#_terminal_window_manger">Terminal Window Manger</a>
@@ -81,6 +82,9 @@
 </li>
 <li>
 <p><a href="regular-expressions" class="bare">regular-expressions</a></p>
+</li>
+<li>
+<p><a href="unix" class="bare">unix</a></p>
 </li>
 <li>
 <p><a href="vim" class="bare">vim</a></p>
@@ -192,42 +196,6 @@
 </div>
 <div class="sect2">
 <h3 id="_linux">Linux</h3>
-<table class="tableblock frame-all grid-all stretch">
-<caption class="title">Table 1. Linux directory structure</caption>
-<colgroup>
-<col style="width: 50%;">
-<col style="width: 50%;">
-</colgroup>
-<tbody>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">/bin</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Executables.</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">/root</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Root user data.</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">/home/*</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Other user data.</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">/opt</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Optional software (things you can&#8217;t instal with package manager).</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">/etc</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Configuration files.</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">/lib</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Shared libraries.</p></td>
-</tr>
-</tbody>
-</table>
-<div class="paragraph">
-<p><a href="https://linuxhandbook.com/linux-directory-structure/" class="bare">linuxhandbook.com/linux-directory-structure/</a></p>
-</div>
 <div class="paragraph">
 <p><strong>Type special characters</strong></p>
 </div>
@@ -335,7 +303,7 @@ I can not enough recommend you to remap caps lock key to escape.</p>
 <h2 id="_terminal">Terminal</h2>
 <div class="sectionbody">
 <table class="tableblock frame-all grid-all stretch">
-<caption class="title">Table 2. Terminal shortcuts</caption>
+<caption class="title">Table 1. Terminal shortcuts</caption>
 <colgroup>
 <col style="width: 50%;">
 <col style="width: 50%;">
@@ -445,6 +413,12 @@ I can not enough recommend you to remap caps lock key to escape.</p>
 </ol>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_video_player">Video Player</h3>
+<div class="paragraph">
+<p><a href="https://www.videolan.org/vlc/" class="bare">www.videolan.org/vlc/</a></p>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -484,7 +458,7 @@ tmux attach -t SESSION_NAME</code></pre>
 </div>
 </div>
 <table class="tableblock frame-all grid-all stretch">
-<caption class="title">Table 3. Work with tabs</caption>
+<caption class="title">Table 2. Work with tabs</caption>
 <colgroup>
 <col style="width: 50%;">
 <col style="width: 50%;">
@@ -519,7 +493,7 @@ tmux attach -t SESSION_NAME</code></pre>
 </tbody>
 </table>
 <table class="tableblock frame-all grid-all stretch">
-<caption class="title">Table 4. Splitting the screen</caption>
+<caption class="title">Table 3. Splitting the screen</caption>
 <colgroup>
 <col style="width: 50%;">
 <col style="width: 50%;">
@@ -546,7 +520,7 @@ tmux attach -t SESSION_NAME</code></pre>
 </tbody>
 </table>
 <table class="tableblock frame-all grid-all stretch">
-<caption class="title">Table 5. Scroll up the terminal</caption>
+<caption class="title">Table 4. Scroll up the terminal</caption>
 <colgroup>
 <col style="width: 50%;">
 <col style="width: 50%;">
@@ -585,7 +559,7 @@ tmux attach -t SESSION_NAME</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-18 23:16:21 +0200
+Last updated 2023-04-25 20:22:36 +0200
 </div>
 </div>
 </body>
