postgresql readme was updated with info about granting permissions to the user.

--- a/data/postgresql/index.html
+++ b/data/postgresql/index.html
@@ -159,12 +159,18 @@ drop database DATABASE_NAME;
 drop user USER_NAME;</code></pre>
 </div>
 </div>
+<div class="listingblock">
+<div class="title">Grant user the permission to create tables.</div>
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-sql hljs" data-lang="sql">grant all on schema public to USER_NAME;</code></pre>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-25 20:12:43 +0200
+Last updated 2023-05-04 13:55:25 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
