Programming readme was updated.

--- a/programming/index.html
+++ b/programming/index.html
@@ -40,6 +40,9 @@
 <p><a href="https://dl.acm.org/doi/10.1145/358896.358899">1980, Kenneth E. Iverson, Notation as a tool of thought</a></p>
 </li>
 <li>
+<p><a href="https://dl.acm.org/doi/10.1145/3520306.3534504">2022, Conor Hoekstra, Combinatory logic and combinators in array languages</a></p>
+</li>
+<li>
 <p><a href="https://youtube.com/playlist?list=PLVFrD1dmDdvdvWFK8brOVNL7bKHpE-9w0">Structure and Interpretation of Computer Programs - YouTube playlist by @code_report</a></p>
 </li>
 <li>
@@ -49,7 +52,16 @@
 <p><a href="https://youtube.com/playlist?list=PLVFrD1dmDdvdv7trr5j9ir7qrFK5K80X0">Seven Languages in Seven Weeks - YouTube playlist by @code_report</a></p>
 </li>
 <li>
+<p><a href="https://en.wikipedia.org/wiki/Type_class" class="bare">en.wikipedia.org/wiki/Type_class</a></p>
+</li>
+<li>
 <p><a href="https://en.wikipedia.org/wiki/Tacit_programming" class="bare">en.wikipedia.org/wiki/Tacit_programming</a></p>
+</li>
+<li>
+<p><a href="https://aplwiki.com/wiki/Train" class="bare">aplwiki.com/wiki/Train</a></p>
+</li>
+<li>
+<p><a href="https://docs.modular.com/mojo/" class="bare">docs.modular.com/mojo/</a></p>
 </li>
 </ul>
 </div>
@@ -252,11 +264,11 @@ In programming language design, a <strong>first-class</strong> citizen (also typ
 <dd>
 <p>First abstraction above machine code.</p>
 </dd>
-<dt class="hdlist1">C Language</dt>
+<dt class="hdlist1">C</dt>
 <dd>
 <p>One of the most successful languages of all time.
 I believe, most of the programming languages are written in the C language.
-Its at that time popularity can be grasped from the song <a href="https://youtu.be/1S1fISh-pag">Write in C</a>.</p>
+You can sense C&#8217;s at the time popularity from the song <a href="https://youtu.be/1S1fISh-pag">Write in C</a>.</p>
 </dd>
 <dt class="hdlist1"><a href="https://go.dev/">Go</a></dt>
 <dd>
@@ -264,8 +276,9 @@ Its at that time popularity can be grasped from the song <a href="https://youtu.
 </dd>
 <dt class="hdlist1"><a href="https://www.rust-lang.org/">Rust</a></dt>
 <dd>
-<p>The most loved programming language, plus another language that made it to the Linux kernel source code.
-Memory safety done by borrow checker, is the most loved language, made it to the kernel.</p>
+<p>The most loved programming language.
+Memory safety is done by borrow checker.
+Is another language that made it to the Linux kernel source code.</p>
 </dd>
 <dt class="hdlist1"><a href="zsh">Z shell</a></dt>
 <dd>
@@ -291,14 +304,14 @@ Memory safety done by borrow checker, is the most loved language, made it to the
 <dd>
 <p>Great (array) language for mathematics that runs fast (jit).</p>
 </dd>
-<dt class="hdlist1"><a href="https://mlochbaum.github.io/BQN/">BQN</a></dt>
+<dt class="hdlist1"><a href="bqn">BQN</a></dt>
 <dd>
 <p>Iversonian language, by Marshall Lochbaum who started in J and implemented a lot of Dyalog APL himself.</p>
 </dd>
 <dt class="hdlist1"><a href="https://www.raku.org/">Raku</a></dt>
 <dd>
 <p>Formerly called Perl 6.
-When regular expressions are not powerful enough, look at <a href="https://docs.raku.org/language/grammar_tutorial.html" class="bare">docs.raku.org/language/grammar_tutorial.html</a>.</p>
+When regular expressions are not powerful enough, look at Raku&#8217;s <a href="https://docs.raku.org/language/grammar_tutorial.html">Grammars</a>.</p>
 </dd>
 </dl>
 </div>
@@ -307,7 +320,7 @@ When regular expressions are not powerful enough, look at <a href="https://docs.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-18 23:50:38 +0200
+Last updated 2023-05-06 10:53:16 +0200
 </div>
 </div>
 </body>
