Elm: Html package was mentioned in the readme.

--- a/programming/elm/index.html
+++ b/programming/elm/index.html
@@ -122,6 +122,10 @@ Elm is a functional programming language for declaratively creating web browser 
 <h3 id="_parser"><a href="https://package.elm-lang.org/packages/elm/parser/latest/Parser">Parser</a></h3>
 
 </div>
+<div class="sect2">
+<h3 id="_html"><a href="https://package.elm-lang.org/packages/elm/html/latest/Html">Html</a></h3>
+
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -145,7 +149,7 @@ elm install elm/parser</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-05 20:51:03 +0200
+Last updated 2023-05-07 21:42:59 +0200
 </div>
 </div>
 </body>
