Haskell: data-aviary package was mentioned in the readme.

--- a/programming/haskell/index.html
+++ b/programming/haskell/index.html
@@ -55,6 +55,9 @@
 <div class="olist arabic">
 <ol class="arabic">
 <li>
+<p><a href="https://hackage.haskell.org/package/data-aviary-0.4.0/docs/Data-Aviary-Birds.html" class="bare">hackage.haskell.org/package/data-aviary-0.4.0/docs/Data-Aviary-Birds.html</a></p>
+</li>
+<li>
 <p><a href="https://wiki.haskell.org/Fold" class="bare">wiki.haskell.org/Fold</a></p>
 </li>
 <li>
@@ -155,6 +158,9 @@
 </li>
 <li>
 <p><a href="http://wiki.haskell.org/Comparison_chain" class="bare">wiki.haskell.org/Comparison_chain</a></p>
+</li>
+<li>
+<p><a href="https://hoogle.haskell.org/" class="bare">hoogle.haskell.org/</a></p>
 </li>
 <li>
 <p><a href="https://hackage.haskell.org/package/probability-0.2.8/docs/Numeric-Probability-Distribution.html" class="bare">hackage.haskell.org/package/probability-0.2.8/docs/Numeric-Probability-Distribution.html</a></p>
@@ -832,7 +838,7 @@ Hackage is the Haskell community&#8217;s central package archive of open source 
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-04-24 13:18:01 +0200
+Last updated 2023-05-05 21:03:40 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
