Haskell readme - reference to Introduction to Haskell course was updated.

--- a/programming/haskell/index.html
+++ b/programming/haskell/index.html
@@ -240,7 +240,7 @@
 <p><a id="cheatsheet"></a>[cheatsheet] <a href="https://hackage.haskell.org/package/CheatSheet-1.7/src/CheatSheet.pdf">Haskell Cheat Sheet</a></p>
 </li>
 <li>
-<p><a href="https://www.seas.upenn.edu/~cis1940/spring23/schedule.html">Introduction to Haskell at University of Pennsylvania School of Engineering and Applied Science</a></p>
+<p><a href="https://www.seas.upenn.edu/~cis1940/spring13/">Introduction to Haskell (Spring 2013) by Brent Yorgey at University of Pennsylvania</a></p>
 </li>
 <li>
 <p><a href="https://en.wikibooks.org/wiki/Yet_Another_Haskell_Tutorial" class="bare">en.wikibooks.org/wiki/Yet_Another_Haskell_Tutorial</a></p>
@@ -838,7 +838,7 @@ Hackage is the Haskell community&#8217;s central package archive of open source 
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-05 21:03:40 +0200
+Last updated 2023-05-08 09:43:48 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/highlight.min.js"></script>
